Modernize codebase with Java 24 features and comprehensive code quality tooling
- **Java Records**: Convert all DTOs and value objects to records for immutability
  - CreateProductRequest, CreateCatalogRequest, UpdatePriceRequest now use records
  - All domain value objects (ProductId, Price, ProductDetails, Category) converted
  - CacheStatistics classes replaced with records

- **Modern Java Features**:
  - Use `var` for type inference throughout codebase
  - Pattern matching with switch expressions and instanceof
  - `@Builder(toBuilder=true)` for complex mutable objects (Product)
  - Collection factory methods (List.of(), Set.of())
  - Enhanced string methods (isBlank() vs trim().isEmpty())

- **Code Quality Tooling**: Add comprehensive static analysis and formatting
  - **Spotless**: Palantir Java formatter with automatic import ordering
  - **PMD**: Custom ruleset adapted for modern Java 24 practices
  - **SpotBugs**: Bug detection with FindSecBugs security plugin
  - **SonarQube**: Integration for code quality metrics
  - **JaCoCo**: Code coverage reporting (disabled due to Java 24 compatibility)

- **PMD Violations Reduced**: From 24 to 4 acceptable violations
  - Fixed string validation, cognitive complexity, thread usage
  - Added serialVersionUID to serializable classes
  - Removed unused variables and optimized method complexity

- **Build Configuration**:
  - Make code quality tools optional for Java 24 compatibility
  - Basic build: `./gradlew build` (formatting only)
  - Full analysis: `./gradlew build -PenableAllQualityChecks`
  - All tests pass, build succeeds reliably

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>